--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ html{
     font-size: 62%;
     scroll-behavior: smooth;
     scroll-padding-top: 8rem;
+    background: var(--bg);
 }
 
 html::-webkit-scrollbar{
@@ -273,13 +274,17 @@ header .auto img{
 }
 
 /*Vakances*/
-
 #vakancesH{
     font-size: 5em;
     line-height: 1.9rem;
     padding: 12rem 1rem 7rem 1rem;
     color: var(--darkgreen);
     text-align: center;
+}
+.akt{
+    display: flex;
+    justify-content: center;
+    flex-direction:row
 }
 table{
     display:inline-block;
@@ -417,6 +422,14 @@ th{
     text-align: center;
 }
 
+#aktualitatesH1{
+    font-size: 5em;
+    line-height: 1.9rem;
+    padding: 5rem 1rem 7rem 1rem;
+    color: var(--darkgreen);
+    text-align: center;
+}
+
 #aktualitate .box-container{
     display:flex;
     flex-direction: row;
@@ -469,6 +482,24 @@ th{
     background-color:rgb(216, 216, 216);
  }
 
+  .pievienot{
+    margin-left: 45%;
+    margin-bottom: 5rem;
+    cursor: pointer;
+    width: 200px;
+    height: 50px; 
+    font-size: 2.3rem;
+    box-shadow: var(--box-shadow);
+    text-align: center;
+    border-radius: 1rem;
+    background-color:rgb(216, 216, 216);
+ }
+
+ .pievienot:hover{
+    background-color:rgb(183, 249, 180);
+ }
+
+
  #aktualitate .box-container .box button:hover{
     cursor: pointer;
     width: 150px;
@@ -513,7 +544,7 @@ th{
     justify-content: center;
     left: 50%;
     align-items: center;
-    background-color: var(--bg);
+    background: var(--bg);
 }
 
 .autorizeties form{
@@ -567,5 +598,5 @@ z-index: 2;
 
 .mazs{
     max-width: 50px;
-    margin: 0 1rem;
+    margin: 0.1rem 1rem;
 }
